[metadata]
name = openstack-keystone-hashicorp-vault-provider
summary = Openstack Keystone Token and Credentials Provider that uses Hashicorp Vault Transit Backends
python_requires = >=3.8

[files]
packages =
    openstack_keystone_hashicorp_vault_provider

[entry_points]
keystone.token.provider =
    hashicorp_vault = openstack_keystone_hashicorp_vault_provider.token.providers.hashicorp_vault:Provider

keystone.credential.provider =
    hashicorp_vault = openstack_keystone_hashicorp_vault_provider.credential.providers.hashicorp_vault:Provider